Added links to LinkedIn and Github. Removed Google+.

--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
 <footer class="footer">
   <p>Connect with me on:</p>
   <ul class="social">
-    <li><a href="#" target="_blank">Google+</a></li>
-    <li><a href="#" target="_blank">Twitter</a></li>
-    <li><a href="#" target="_blank">Github</a></li>
+    <li><a href="https://www.linkedin.com/pub/harshada-kurahatti/ba/500/a0b" target="_blank">LinkedIn</a></li>
+    <li><a href="https://github.com/harshadak" target="_blank">Github</a></li>
   </ul>
 </footer>
 </html>
